<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnsGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/första_siffran"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/andra_siffran"
            android:inputType="number" />

        <LinearLayout
            android:id="@+id/resultGrid"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/resultat"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textSize="24sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnsGrid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:baselineAligned="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnsGrid2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/addition" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/subtraktion" />

        <Button
            android:id="@+id/btnSlash"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/division" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnsGrid2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnsGrid3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiplikation" />

        <Button
            android:id="@+id/btnSqr"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/roten_ur" />

        <Button
            android:id="@+id/btnProcent"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/procent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnsGrid3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnPythagoras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pythagoras_sats" />

        <Button
            android:id="@+id/btnCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/cirkelns_area" />

        <Button
            android:id="@+id/btnVolym"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cylinderns_volym" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>